--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
+    "appcenter": "^4.4.3",
+    "appcenter-analytics": "^4.4.3",
+    "appcenter-crashes": "^4.4.3",
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-safe-area-context": "^4.2.4",
