--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "androidBuild": "cd android && ./gradlew assemblerelease",
+    "cleanAndroid": "cd android && ./gradlew clean",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
